[project]
name = "rah-sha256-hasher"
version = "0.1.0"
description = "An example rah handler that writes the SHA-256 of a message field into a REDCap record"
readme = "README.md"
authors = [
    { name = "Nate Vack", email = "njvack@wisc.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "redcap-alert-handler>=0.1,<0.2",
    "httpx>=0.28.1",
]

[project.entry-points."rah.handlers"]
hash_field = "rah_sha256_hasher.handler:hash_field"

[tool.uv.sources]
redcap-alert-handler = { git = "https://github.com/uwmadison-chm/redcap-alert-handler" }

[dependency-groups]
dev = [
    "pytest>=9.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"
